# pyMindMap

./: .gitignore  README.md  pyproject.toml
examples/: demo.mindmap.json
src/pymindmap/: __main__.py  cli.py  commands.py  errors.py  layout.py  model.py
src/pymindmap/gui/: app.py  canvas_view.py  dialogs.py  editor_overlay.py  keybindings.py
src/pymindmap/io/: __init__.py  freemind.py  json_format.py  markdown_export.py
tests/: test_cli.py  test_commands.py  test_io_dispatch.py  test_io_freemind.py  test_io_json.py  test_io_markdown.py  test_layout.py  test_model.py
tests/fixtures/: sample.mindmap.json  sample.mm
