[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pymindmap"
version = "0.1.0"
description = "A simple Tkinter-based mind mapping tool with FreeMind interop"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
pymindmap = "pymindmap.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
